deployments/audiobookshelf/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service
  namespace: media
spec:
  type: ClusterIP
  ports:
  - port: 13378
    targetPort: 80  # Changed to the internal container port
  selector:
    app: audiobookshelf
    part-of: audiobookshelf
