deployments/audiobookshelf/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingress
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.audiobookshelf.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: audiobookshelf-service
          port: 13378
    - match: Host(`audiobookshelf.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: audiobookshelf-service
          port: 13378
      middlewares:
        - name: default-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
